<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pbot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nguyenhatrung411@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_localization</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>twist_mux</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <!-- <depend>interactive_marker_twist_server</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
